[package]
name = "ptywrap"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["fs", "process", "signal", "term"] }
vt100 = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
libc = "0.2"
